<resources>
    <string name="app_name">primerBoceto</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings_users">SettingsActivityUsers</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--Nombres de las diferentes actividades-->
    <string name="actiCalculadora">Calculadora</string>
    <string name="actiMain">Menu</string>
    <string name="actiLogin">Inicio de sesión</string>
    <string name="actiRegistro">Registrarse</string>
    <string name="actiJuego">Juego de piedra, papel y tijera</string>

    <!--Login-->
    <string name="btnLogin">Iniciar sesión</string>
    <string name="etUsuario">Introduce tu correo</string>
    <string name="etPassword">Introduce la contraseña</string>
    <string name="tvTituloLogin">Inicio de sesión</string>
    <string name="btnRegistro">Registrarse en la aplicacion</string>

    <!--Registro-->
    <string name="tvRegistro">¡Bienvenido! Para poder acceder a la plataforma es necesario que rellenes este formulario.</string>
    <string name="ivRegistro">Logotipo de la aplicacion</string>
    <string name="etEmail">Introduce tu email</string>
    <string name="etPasswordRegistro">Introduce la contraseña</string>
    <string name="etPasswordRegistroRepe">Vuelve a introducir la contraseña</string>
    <string name="tvSexo">Sexo:</string>
    <string name="rbMasculino">Hombre</string>
    <string name="rbFemenino">Mujer</string>
    <string name="cbTerminosUso">Acepto los Terminos y Condiciones</string>
    <string name="btnEnviarRegistro">Enviar registro</string>

    <!-- Main -->
    <string name="btnCerrarSesion">Cerrar sesión</string>
    <string name="btnImgCalculadora">Abrir la calculadora</string>
    <string name="btnImgPiePapTij">Abrir el juego de piedra, papel y tijera</string>
    <string name="tvMenu">Opciones de la aplicacion:</string>

    <!-- Opciones del calendario, reservar plazas -->
    <string name="tvDiaMes">Lunes 19 / 10</string>
    <string name="tvHorasDia">9:30 &#8211; 10:30 &#8211; 11:30 &#8211; 5:30 </string>
    <string name="flechaIzquierda">Flecha izquierda, indica que puedes pasar al dia anterior.</string>
    <string name="flechaDerecha">Flecha derecha, indica que puedes pasar al dia siguiente.</string>
    <string name="tvNombreEntrenamiento">Crossfit</string>
    <string name="tvHoraEntrenamiento">9:30</string>

    <string name="btnImagenEntrenador">Boton con la foto del perfil del entrenador.</string>

    <!--Calculadora-->
    <string name="tvTituloCalculadora">Calculadora</string>
    <string name="tnNumero1">Escribe el primero numero</string>
    <string name="tnNumero2">Escribe el segundo numero</string>
    <string name="rbSumar">Sumar</string>
    <string name="rbRestar">Restar</string>
    <string name="rbMultiplicar">Multiplicar</string>
    <string name="rbDividir">Dividir</string>
    <string name="tvResultado">Resultado</string>
    <string name="btnResultado">=</string>
    <string name="tvOpciones">Seleciona la operacion que deseas hacer:</string>

    <!--Juego piedra papel y tijera-->


    <!--Menu Overflow-->
    <string name="ofCalculadora">Calculadora</string>
    <string name="ofRegistrarse">Registrarse</string>
    <string name="ofPiePapTij">Juego de piedra, papel y tiejra</string>
    <string name="ofCerrarSesion">Cerrar sesion</string>
</resources>