<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.primerboceto.mainActivity">
    <item
        android:id="@+id/ofCalculadora"
        android:orderInCategory="100"
        android:title="@string/ofCalculadora"
        app:showAsAction="never" />
    <item
        android:id="@+id/ovContar"
        android:orderInCategory="101"
        android:title="@string/ofContar" />
    <item
        android:id="@+id/ofPiePapTij"
        android:orderInCategory="102"
        android:title="@string/ofPiePapTij" />
    <item
        android:id="@+id/ofCerrarSesion"
        android:orderInCategory="103"
        android:title="@string/ofCerrarSesion" />
</menu>