<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".calculadoraActivity">

        <EditText
            android:id="@+id/etNumero1"
            android:layout_width="229dp"
            android:layout_height="43dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="88dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/tnNumero1"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNumero2"
            android:layout_width="230dp"
            android:layout_height="47dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/tnNumero2"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNumero1" />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="44dp"
            android:text="@string/tvResultado"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnResultado" />

        <RadioGroup
            android:id="@+id/rbGrupoOperacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOpciones">

            <RadioButton
                android:id="@+id/rbSumar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbSumar" />

            <RadioButton
                android:id="@+id/rbRestar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbRestar" />

            <RadioButton
                android:id="@+id/rbMultiplicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbMultiplicar" />

            <RadioButton
                android:id="@+id/rbDividir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbDividir" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvOpciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:text="@string/tvOpciones"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNumero2" />

        <Button
            android:id="@+id/btnResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="28dp"
            android:onClick="operacion"
            android:text="@string/btnResultado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbGrupoOperacion" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>