<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDiaMes"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="@+id/toolbar3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="@+id/toolbar3"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/btnDiaAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/flechaIzquierda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageButton
        android:id="@+id/btnDiaSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="62dp"
        android:contentDescription="@string/flechaDerecha"
        android:rotationY="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/tvHorasDia"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tvHorasDia"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDiaAnterior" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="195dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHorasDia"
        app:rowCount="3">

        <ImageButton
            android:id="@+id/btnImagenPerfil"
            android:layout_width="84dp"
            android:layout_height="63dp"
            android:contentDescription="@string/btnImagenEntrenador"
            app:layout_column="0"
            app:layout_gravity="fill"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvNombreEntrenamiento"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreEntrenamiento"
            app:layout_column="1"
            app:layout_gravity="fill" />

        <TextView
            android:id="@+id/tvHoraEntrenamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvHoraEntrenamiento"
            app:layout_column="2"
            app:layout_gravity="fill" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>