<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:id="@+id/divisor1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvMenu"
            android:textSize="24sp" />

        <View
            android:id="@+id/divisor3"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animationCache="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnImgCalculadora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/btnImgCalculadora"
                    android:onClick="opcionCalculadora"
                    tools:src="@drawable/calculadora" />

                <ImageButton
                    android:id="@+id/btnImgPiePapTij"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/btnImgPiePapTij"
                    android:onClick="opcionPiePapTij"
                    tools:src="@drawable/piedra_papel_tijera" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divisor2"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animationCache="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCerrarSesion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="opcionCerrarSesion"
                    android:text="@string/btnCerrarSesion" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>